[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuerPy"
version = "0.18.0"
description = "A Python implementation of the queuer system - a job queuing and processing system with PostgreSQL backend"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Simon Herrmann", email = "siherrmann@users.noreply.github.com"}
]
maintainers = [
    {name = "Simon Herrmann", email = "siherrmann@users.noreply.github.com"}
]
keywords = ["queue", "job", "task", "postgresql", "worker", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = [
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=3.7.0",
    "psutil>=5.8.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.14.0",
    "testcontainers[postgres]>=3.7.0",
    "psutil>=5.8.0",
]

[project.urls]
Homepage = "https://github.com/siherrmann/queuerPy"
Repository = "https://github.com/siherrmann/queuerPy"
Issues = "https://github.com/siherrmann/queuerPy/issues"
Documentation = "https://github.com/siherrmann/queuerPy#readme"

[tool.setuptools]
packages = ["queuerPy", "queuerPy.core", "queuerPy.database", "queuerPy.helper", "queuerPy.model", "queuerPy.sql"]

[tool.setuptools.package-dir]
"queuerPy" = "."

[tool.setuptools.package-data]
"queuerPy" = ["py.typed"]
"queuerPy.sql" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
asyncio_mode = "strict"

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.mypy]
python_version = "0.18.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true